--- a/Sherlock.bot/.env
+++ b/Sherlock.bot/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN =MTAyOTQxMjI0ODkyMzQwNjM2Ng.G-d43e.s-3YRZvII4J6Rlo124C1ebLQUbuTGoCc7uxLLo
+DISCORD_TOKEN =MTAyOTQxMjI0ODkyMzQwNjM2Ng.GqJyvb.o3pQnm7vzIhcqEHqBrcJXFAAI_knHmlv5s5moA
