game_added_to_the_bot

--- a/Sherlock.bot/.env
+++ b/Sherlock.bot/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN =MTAyOTQxMjI0ODkyMzQwNjM2Ng.GqJyvb.o3pQnm7vzIhcqEHqBrcJXFAAI_knHmlv5s5moA
+DISCORD_TOKEN =MTAyOTQxMjI0ODkyMzQwNjM2Ng.GTKcZx.h1fJe1KMk8UWPuNKUbCNZbGCEBYUPwwL6cSFoI
